# Parseltongue

./: .gitignore  CMakeLists.txt  README.md
include/parseltongue/: char_array.hpp  endian.hpp  file_format.hpp  mode.hpp  plugin.hpp  print_helper.hpp  utf_8_validator.hpp  wave.hpp
include/parseltongue/exceptions/: file_could_not_be_opened.hpp  file_format_exception.hpp  plugin_exception.hpp
lib/: CMakeLists.txt  plugin.cpp
plugins/: CMakeLists.txt
plugins/aiff/: CMakeLists.txt  aiff.cpp  aiff.hpp  lib.cpp
plugins/png/: CMakeLists.txt  lib.cpp  png.cpp  png.hpp
plugins/tiff/: CMakeLists.txt  lib.cpp  tiff.cpp  tiff.hpp
plugins/wave/: CMakeLists.txt  lib.cpp  wave.cpp  wave.hpp
src/: CMakeLists.txt  main.cpp
